@@ -5,6 +5,8 @@ Release 5.1.2 (Unreleased)
 Bug fixes
 ---------
 
+- GUI: ensure runcase and current XML file are consistent before running.
+
 - Fix automatic settings for smoothers when using mumtigrid as a solver.
 
 - Fix synchro. of order 3 tensor in iterative tensor gradient in case of
